--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,4 +1,5 @@
 version: 0.2
+
 env:
   variables:
     CONTAINER_NAME: "app"
@@ -6,16 +7,24 @@ env:
 phases:
   pre_build:
     commands:
+      - echo "Logging in to Amazon ECR..."
+      - aws --version
       - COMMIT_SHA=${CODEBUILD_RESOLVED_SOURCE_VERSION}
       - IMAGE_TAG=${COMMIT_SHA:0:7}
+      - echo "Commit: $COMMIT_SHA  Tag: $IMAGE_TAG"
       - aws ecr get-login-password --region "$AWS_DEFAULT_REGION" | docker login --username AWS --password-stdin "$ECR_REPO_URI"
   build:
     commands:
+      - echo "Building Docker image..."
       - docker build -t "$ECR_REPO_URI:$IMAGE_TAG" .
   post_build:
     commands:
+      - echo "Pushing Docker image..."
       - docker push "$ECR_REPO_URI:$IMAGE_TAG"
+      - echo "Generating imagedefinitions.json..."
       - printf '[{"name":"%s","imageUri":"%s"}]' "$CONTAINER_NAME" "$ECR_REPO_URI:$IMAGE_TAG" > imagedefinitions.json
+      - cat imagedefinitions.json
+
 artifacts:
   files:
     - imagedefinitions.json
