--- a/package.json
+++ b/package.json
@@ -2,6 +2,5 @@
   "name": "ecs-cicd-demo",
   "version": "1.0.0",
   "main": "app.js",
-  "scripts": { "start": "node app.js" },
-  "dependencies": { "express": "^4.19.2" }
+  "scripts": { "start": "node app.js" }
 }
