--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,29 +1,22 @@
 version: 0.2
 
-env:
-  variables:
-    CONTAINER_NAME: "app"
-
 phases:
   pre_build:
     commands:
-      - echo "Logging in to Amazon ECR..."
-      - echo "AWS region: $AWS_DEFAULT_REGION"
-      - COMMIT_SHA=$CODEBUILD_RESOLVED_SOURCE_VERSION
-      - IMAGE_TAG=$(echo "$COMMIT_SHA" | cut -c 1-7)
-      - echo "Commit: $COMMIT_SHA"
-      - echo "Image tag: $IMAGE_TAG"
+      - echo "Pre-build started"
+      - echo "ECR_REPO_URI=$ECR_REPO_URI"
       - aws ecr get-login-password --region "$AWS_DEFAULT_REGION" | docker login --username AWS --password-stdin "$ECR_REPO_URI"
+
   build:
     commands:
-      - echo "Building Docker image..."
-      - docker build -t "$ECR_REPO_URI:$IMAGE_TAG" .
+      - echo "Build started"
+      - docker build -t "$ECR_REPO_URI:latest" .
+
   post_build:
     commands:
-      - echo "Pushing Docker image..."
-      - docker push "$ECR_REPO_URI:$IMAGE_TAG"
-      - echo "Writing imagedefinitions.json..."
-      - printf '[{"name":"%s","imageUri":"%s"}]' "$CONTAINER_NAME" "$ECR_REPO_URI:$IMAGE_TAG" > imagedefinitions.json
+      - echo "Post-build started"
+      - docker push "$ECR_REPO_URI:latest"
+      - printf '[{"name":"app","imageUri":"%s"}]' "$ECR_REPO_URI:latest" > imagedefinitions.json
       - cat imagedefinitions.json
 
 artifacts:
